Bug 332176 - kmail,adblockrules downloadding fails
Summary: kmail,adblockrules downloadding fails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 4.12.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-15 10:04 UTC by Philippe ROUBACH
Modified: 2014-03-15 13:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-03-15 10:04:13 UTC
in kmail settings < security > ad block
add the filter "adbloclrules.org"
then
knotifier says dowloading fails
ask to the notifier the details of the notification 
then
you have this error message :

Une erreur est survenue pendant le téléchargement de la liste : « Le fichier ou le dossier http://adblockrules.org/download.php?typeall n'existe pas. »
<=>
http://adblockrules.org/download.php?typeal does not exist

Reproducible: Always
Comment 1 Laurent Montel 2014-03-15 11:06:22 UTC
I will investigate
Comment 2 Laurent Montel 2014-03-15 12:23:06 UTC
Git commit 33013ae1ca6c277db138bb482de69e005670081a by Montel Laurent.
Committed on 15/03/2014 at 12:22.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 332176 - kmail,adblockrules downloadding fails

FIXED-IN: 4.12.4

M  +1    -1    messageviewer/adblock/adblockutil.cpp

http://commits.kde.org/kdepim/33013ae1ca6c277db138bb482de69e005670081a
Comment 3 Laurent Montel 2014-03-15 12:23:41 UTC
it doesn't exist now.
I removed it
Comment 4 Philippe ROUBACH 2014-03-15 13:03:17 UTC
ok thanks