Fix Bug 332176 - kmail,adblockrules downloadding fails

FIXED-IN: 4.12.4
BUG: 332176